# automating-wordle

./: CHANGELOG.md  automating-wordle.cabal
app/: Main.hs
src/: Wordle.hs
