cabal-version:      2.4
name:               example-app
version:            0.1.0.0
synopsis:
homepage:
license:            NONE
author:             Peter Murphy
maintainer:         pete@simspace.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Wordle
    build-depends:
        base ^>=4.14.2.0,
        bytestring,
        containers,
        http-client,
        http-client-tls
    hs-source-dirs:   src
    default-language: Haskell2010

executable example-app-exe
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.2.0,
        example-app
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite example-app-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.2.0
